# workshop-ragV2

./: .dockerignore  .gitignore  .ollama_model  Dockerfile.backend  Dockerfile.frontend  IMPLEMENTATION.md  LICENSE  README.md  docker-compose.yml  jobs.db
.github/workflows/: docker-publish.yml
backend/: .env.example  README.md  pyproject.toml  setup.sh
backend/app/: main.py
backend/app/api/: __init__.py  chat.py  documents.py  models.py  models_ollama_backup.py  query.py  xml.py
backend/app/core/: config.py
backend/app/schemas/: __init__.py  document.py  query.py  xml.py
backend/app/services/: __init__.py  async_processor.py  chat_history.py  document_processor.py  embedding_service.py  graph_service.py  job_persistence.py  llm_service.py  qdrant_service.py  xml_processor.py
frontend/: .env.example  .eslintrc.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  theme.ts
frontend/src/components/: DocumentManagement.tsx  DocumentUploadModal.tsx  LLMChat.tsx  MainWindow.tsx  ModelSelector.tsx  PromptManagement.tsx  QueryInterface.tsx  QueryTransformations.tsx  RAGChat.tsx  RetrievedPassages.tsx  RetrievedPassages.tsx.bak  RetrievedPassagesModal.tsx  Settings.tsx  Sidebar.tsx
frontend/src/services/: api.ts
scripts/: download_model.sh  setup_all.sh  start_all.sh  start_ollama.sh  start_qdrant.sh  start_vllm.sh  stop_all.sh
